sub routes and page assignment to team members

--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -1,1 +1,9 @@
-<div>home</div>
+<!-- All links you will need 👇👇👇👇 -->
+<!-- <a href="#/prospect" exact="active-link"> view prospect </a>
+  <a href="#/report" exact="active-link"> view report </a>
+  <a href="#/prospect/create-prospect" exact="active-link"> create prospect </a>
+  <a href="#/prospect" exact="active-link"> view all </a> -->
+
+<div>
+  <!-- your work goes here -->
+</div>
