--- a/pages/main.html
+++ b/pages/main.html
@@ -1,6 +1,53 @@
-<div >
-  <a href="#/dashboard-page">
-    <img src="../assets/dashboardIcon.svg" alt="" />
-    <span class="sidebar-text"> Overview </span>
-  </a>
+<div class="form_container">
+  <div class="left">
+    <div class="left_cont">
+      <div class="heading">
+        <h1>Referral Management</h1>
+        <p>Welcome. Login to your portal account.</p>
+      </div>
+      <form id="login-form">
+        <div class="form-group login-id-group">
+          <label for="login-id">Username</label>
+          <div class="input-wrapper">
+            <input
+              type="text"
+              id="login-id"
+              required
+              placeholder="enter your login ID"
+            />
+            <img src="./assets/user.svg" alt="" />
+          </div>
+        </div>
+        <div class="form-group password-group">
+          <div class="label">
+            <label for="password">Password</label>
+            <span class="show-password">SHOW</span>
+          </div>
+          <div class="input-wrapper">
+            <input
+              type="password"
+              id="password"
+              required
+              placeholder="enter your password"
+            />
+            <img src="./assets//lock.svg" alt="" />
+          </div>
+        </div>
+        <div class="form-options">
+          <label class="checkbox">
+            <input type="checkbox" />
+            Keep me logged In
+          </label>
+
+          <a href="#" class="reset-password">Reset Password</a>
+        </div>
+        <button type="submit">
+          <a href="#dashboard-page" class="login-button"> Login</a>
+        </button>
+      </form>
+    </div>
+  </div>
+  <div class="right">
+    <img src="./assets/help.svg" class="help" alt="help" />
+  </div>
 </div>
