--- a/pages/prospect.html
+++ b/pages/prospect.html
@@ -1,1 +1,14 @@
-<div>prospect</div>
+<!-- All buttons you will need 👇 -->
+
+<!-- <a href="#/prospect/create-prospect" exact="active-link">
+  create prospect
+</a>
+<a href="#/prospect/ongoing-prospect" exact="active-link">
+  ongoing
+</a>
+<a href="#/prospect/ongoing-prospect" exact="active-link"> view </a> -->
+
+<div>
+    <p>prospect page</p>
+<!-- your work goes here -->
+</div>
