--- a/pages/report.html
+++ b/pages/report.html
@@ -1,1 +1,14 @@
-<p>helo</p>
+<!-- all your links needed here view on the modal -->
+👇
+<!-- <a href="#/report/report-data" exact="active-link">
+  view report data
+</a>
+<a href="#/report/report-table" exact="active-link">
+  view report table
+</a>
+<a href="#/prospect" exact="active-link"> prospect </a> -->
+
+<div>
+  Report page
+  <!-- your work goes in here -->
+</div>
