--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <link rel="stylesheet" href="/css/layout.css" />
   <link rel="stylesheet" href="/css/settings.css" />
+  <link rel="stylesheet" href="/css/main.css" />
+
   <style>
     * {
       margin: 0;
@@ -19,6 +21,11 @@
     a {
       cursor: pointer;
       text-decoration: none;
+    }
+    button {
+      outline: none;
+      border: none;
+      border-radius: 5px;
     }
   </style>
   <body>
