--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   <link rel="stylesheet" href="/css/layout.css" />
   <link rel="stylesheet" href="/css/settings.css" />
   <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/create-prospect-upload.css" />
+  <link rel="stylesheet" href="/css/create-prospect.css" />
+  <link rel="stylesheet" href="/css/dashboard-page.css" />
+  <link rel="stylesheet" href="/css/ongoing-prospect.css" />
+  <link rel="stylesheet" href="/css/prospect.css" />
+  <link rel="stylesheet" href="/css/report-data.css" />
+  <link rel="stylesheet" href="/css/report-table.css" />
+  <link rel="stylesheet" href="/css/report.css" />
+  <link rel="stylesheet" href="/css/settings-account.css" />
+  <link rel="stylesheet" href="/css/settings.css" />
+  <link rel="stylesheet" href="/css/settings-change-password.css" />
 
   <style>
     * {
