--- a/pages/report.html
+++ b/pages/report.html
@@ -9,6 +9,6 @@
 <a href="#/prospect" exact="active-link"> prospect </a> -->
 
 <div>
-  Report page
+  <h1 style="width: 100%; border: 2px solid black">Report page</h1>
   <!-- your work goes in here -->
 </div>
