Added create-prospect-upload.html page(Responsiveness for smaller screen is yet to be done)

--- a/pages/create-prospect-upload.html
+++ b/pages/create-prospect-upload.html
@@ -1,4 +1,77 @@
  <!-- <a href="#/prospect/create-prospect-upload" exact="active-link"> view report data </a> -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create Prospect</title>
+    <link rel="stylesheet" href="../css/create-prospect-upload.css">
+</head>
+<body>
+    <div class="create-prospect-upload-container">
+     <h1>Create Prospect-Document upload</h1>
+    <div class="prospect-list-table" >
+      <h2>My prospect list.xls <span>154kb</span></h2>
+      <div class="createprospect-tablewrapper">
+        <table class="createprospecttable">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name &nbsp;<img src="../assets/table dropdown.svg" /></th>
+              <th>
+                Email&nbsp;<img src="../assets/table dropdown.svg" />
+              </th>
+              <th>
+                Phone Number&nbsp;<img src="../assets/table dropdown.svg" />
+              </th>
+              <th>
+                Product Interest&nbsp;<img src="../assets/table dropdown.svg" />
+              </th>
+              
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><img src="../assets/avatar-prospect-user.svg"/></td>
+              <td>Nurudeen Ibrahim</td>
+              <td>thendden@gmail.com</td>
+              <td>08014623461</td>
+              <td>Auto Insurance</td>
+            </tr>
+            <tr>
+              <td><img src="../assets/avatar-prospect-user.svg"/></td>
+              <td>Nurudeen Ibrahim</td>
+              <td>thendden@gmail.com</td>
+              <td>08014623461</td>
+              <td>Auto Insurance</td>
+            </tr>
+            <tr>
+              <td><img src="../assets/avatar-prospect-user.svg"/></td>
+              <td>Nurudeen Ibrahim</td>
+              <td>thendden@gmail.com</td>
+              <td>08014623461</td>
+              <td>Auto Insurance</td>
+            </tr>
+            <tr>
+              <td><img src="../assets/avatar-prospect-user.svg"/></td>
+              <td>Nurudeen Ibrahim</td>
+              <td>thendden@gmail.com</td>
+              <td>08014623461</td>
+              <td>Auto Insurance</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+       <!-- cancel and create prospect button -->
+       <div class="createcancel-btn">
+        <button class="xbtn">Cancel</button>
+        <button class="yesbtn">Create Prospect</button>
 
-<div>create prospect upload.html</div>
+      </div>
+    </div>
+   
+
+    </div>
+</body>
+</html>
