--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -51,34 +51,35 @@
               <th>Action&nbsp;<img src="../assets/table dropdown.svg" /></th>
             </tr>
           </thead>
+          
           <tbody>
             <tr>
               <td>Report 001</td>
               <td>04 Jan 2023</td>
               <td>Michael Adesanya</td>
               <td>09 Jan 2023</td>
-              <td class="dots"><img src="../assets/dots.svg" /></td>
+              <td class="dots">...</td>
             </tr>
             <tr>
               <td>Report 002</td>
               <td>04 Jan 2023</td>
               <td>Michael Adesanya</td>
               <td>09 Jan 2023</td>
-              <td class="dots"><img src="../assets/dots.svg" /></td>
+              <td class="dots">...</td>
             </tr>
             <tr>
               <td>Report 003</td>
               <td>04 Jan 2023</td>
               <td>Michael Adesanya</td>
               <td>09 Jan 2023</td>
-              <td class="dots"><img src="../assets/dots.svg" /></td>
+              <td class="dots">...</td>
             </tr>
             <tr>
               <td>Report 004</td>
               <td>04 Jan 2023</td>
               <td>Michael Adesanya</td>
               <td>09 Jan 2023</td>
-              <td class="dots"><img src="../assets/dots.svg" /></td>
+              <td class="dots">...</td>
             </tr>
           </tbody>
         </table>
@@ -184,11 +185,13 @@
       </div>
 
       <!-- success pop-up -->
+      <div class="successpopupcontainer">
       <div class="reportsuccess-popup">
         <h1>Report created <br />successfully</h1>
         <img src="../assets/sucess-img.svg" class="successimg" />
         <button class="success-btn">view</button>
       </div>
+    </div>
     </div>
   </body>
 </html>
