--- a/pages/create-prospect.html
+++ b/pages/create-prospect.html
@@ -1,85 +1,102 @@
 <!-- <a href="#/prospect" exact="active-link"> cancel button </a> -->
 
-
 <div>
   <h2 class="prospectH2">Create a New Prospect</h2>
   <div class="creationTypOptSect">
-    <div class="creationTypOptP" style="color: #34475E;">
+    <div class="creationTypOptP" style="color: #34475e">
       <div class="creationTypOptHeader">
         <h4>Select creation type</h4>
-        <span style="color: #002855;">
-          <a href="#/prospect" exact="active-link" style="color: #002855;">Cancel</a>
+        <span style="color: #002855">
+          <a
+            href="#/prospect"
+            exact="active-link"
+            style="color: #002855"
+            >Cancel</a
+          >
         </span>
       </div>
       <div class="inpTyps">
         <div class="inpTyp">
-          <input type="radio" name="upload" id="individual">
+          <input type="radio" name="upload" id="individual" />
           <label for="individual">Individual</label>
         </div>
         <div class="inpTyp">
-          <input type="radio" name="upload" id="bulkUpload">
+          <input type="radio" name="upload" id="bulkUpload" />
           <label for="bulkUpload">Bulk Upload</label>
         </div>
       </div>
     </div>
     <div class="createProspectFormDiv">
       <form action="" class="createProspectForm">
-        <h4 style="color: #32404F; margin-block: 2.5rem; font-weight: 500;">Fill prospect information</h4>
+        <h4
+          style="
+            color: #32404f;
+            margin-block: 2.5rem;
+            font-weight: 500;
+          "
+        >
+          Fill prospect information
+        </h4>
         <div class="prospectInpFormPDiv">
           <div class="prospectInpChildDiv">
             <label for="fName">First Name</label>
-            <input type="text" name="fName" id="fName">
+            <input type="text" name="fName" id="fName" />
           </div>
           <div class="prospectInpChildDiv">
             <label for="lName">Last Name</label>
-            <input type="text" name="lName" id="lName">
+            <input type="text" name="lName" id="lName" />
           </div>
           <div class="prospectInpChildDiv">
             <label for="prdct">Product Interest</label>
             <div>
-              <input type="text" name="prdct" id="prdct">
-              <i class="fa-solid fa-circle-chevron-down" style="color: #34475E;"></i>
+              <input type="text" name="prdct" id="prdct" />
+              <i
+                class="fa-solid fa-circle-chevron-down"
+                style="color: #34475e"
+              ></i>
             </div>
           </div>
           <div class="prospectInpChildDiv">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" />
           </div>
           <div class="prospectInpChildDiv">
             <label for="phoneNo">Phone Number</label>
-            <input type="text" name="phoneNo" id="phoneNo">
+            <input type="text" name="phoneNo" id="phoneNo" />
           </div>
           <div class="prospectInpChildDiv location">
             <div class="">
               <label for="state">State</label>
-              <input type="text" name="state" id="state">
+              <input type="text" name="state" id="state" />
             </div>
             <div class="">
               <label for="city">City</label>
-              <input type="text" name="city" id="city">
+              <input type="text" name="city" id="city" />
             </div>
           </div>
           <div class="prospectInpChildDiv">
             <label for="ocptn">Occupation</label>
-            <input type="text" name="ocptn" id="ocptn">
+            <input type="text" name="ocptn" id="ocptn" />
           </div>
           <div class="prospectInpChildDiv">
             <div>
               <span for="gender">Gender</span>
               <div class="genderOpts">
                 <div class="inpTyp">
-                  <input type="radio" name="gender" id="male">
+                  <input type="radio" name="gender" id="male" />
                   <label for="male">Male</label>
                 </div>
                 <div class="inpTyp">
-                  <input type="radio" name="gender" id="female">
+                  <input type="radio" name="gender" id="female" />
                   <label for="female">Male</label>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <button type="submit" class="createPrspctBtn"><a href="#">Create Prospect</a></button>
+        <button type="submit" class="createPrspctBtn">
+          <a href="#">Create Prospect</a>
+        </button>
       </form>
     </div>
 
@@ -87,25 +104,30 @@
 
     <div class="bulkUploadSect">
       <h2>Bulk Upload</h2>
-      <p class="clxWarningP">Please ensure the file is in excel (.XLS) format</p>
+      <p class="clxWarningP">
+        Please ensure the file is in excel (.XLS) format
+      </p>
       <div class="bulkUploadTxtareaDiv">
         <textarea name="bulkUploadTxtarea" id="bulkUploadTxtarea">
-      </textarea>
+        </textarea>
         <div class="positionA">
           <div class="cloudDiv">
-            <img src="../assets/cloudIcon.svg" alt="">
+            <img src="../assets/cloudIcon.svg" alt="" />
           </div>
           <div>
-            <label for="attachDoc" id="attachDocLbl"><span style="color: #E6B014;">Select file</span> or
-              drag and
-              drop</label>
-            <input type="file" name="attachDoc" id="attachDoc">
+            <label for="attachDoc" id="attachDocLbl"
+              ><span style="color: #e6b014">Select file</span> or drag
+              and drop</label
+            >
+            <input type="file" name="attachDoc" id="attachDoc" />
             <p class="clxWarningP">CSV or .XLSX file</p>
           </div>
         </div>
       </div>
-      <button type="submit" class="downloadExlBtn"><a href="#">Download excel template</a></button>
+      <button type="submit" class="downloadExlBtn">
+        <a href="#">Download excel template</a>
+      </button>
     </div>
   </div>
-
 </div>
+<script src="/js/create-prospect.js"></script>
