Added functionality to Button element in report-table.html. Made create-prospect-uplod.html responsive

--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -191,7 +191,7 @@
         <img src="../assets/sucess-img.svg" class="successimg" />
         <button class="success-btn">view</button>
       </div>
-    </div>
+     </div>
 
      <!-- <block table for smaller screen -->
       <div class="block-table">
@@ -342,7 +342,7 @@
 
 
     </div>
-
+<script src="../js/report-table.js"></script>
 
   </body>
 </html>
