--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     <script src="/js/entry.js"></script>
     <script src="/js/routes.js"></script>
     <script src="./js/create-prospect-upload.js"></script>
+    <script src="./js/report-table.js"></script>
   </body>
 </html>
