--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <script src="/js/entry.js"></script>
     <script src="/js/routes.js"></script>
 
-    <script src="./js/create-prospect-upload.js"></script>
-    <script src="./js/report-table.js"></script>
+    <!-- <script src="./js/create-prospect-upload.js"></script> -->
+    <!-- <script src="./js/report-table.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
