report page fix. dashboard page added

--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -4,6 +4,131 @@
   <a href="#/prospect/create-prospect" exact="active-link"> create prospect </a>
   <a href="#/prospect" exact="active-link"> view all </a> -->
 
-<div>
-  <!-- your work goes here -->
-</div>
+  <div>
+    <!-- your work goes here -->
+     <!-- this the main container of the dashboard -->
+     <section class="dashboard">
+      <h1>Welcome, Deens <span>👋</span></h1>
+      <!-- the container that contains the four boxes -->
+      <div class="stats">
+          <div class="stat-item blue">
+              <h2>Prospects</h2>
+              <span>200</span>
+          </div>
+          <div class="stat-item yellow">
+              <h2>Users</h2>
+              <span>150</span>
+          </div>
+          <div class="stat-item brown">
+              <h2>Converted</h2>
+              <span >150</span>
+          </div>
+          <div class="stat-item green">
+              <h2>Unconverted</h2>
+              <span>150</span>
+          </div>
+      </div>
+      <!-- the three button -->
+      <div class="actions">
+          <button>View Prospect</button>
+          <button>View Report</button>
+          <button>Create Prospect</button>
+      </div>
+      <!-- the container that contains both the prospects table and the prospect coonversion and chart -->
+      <div class="content">
+          <!-- prospects table that contains the datas -->
+          <div class="prospects">
+              <div class="text">
+                  <h3>Prospects</h3>
+                  <button>View all</button>
+              </div>
+              <table>
+                  <thead>
+                      <tr>
+                          <th>Name</th>
+                          <th>Assigned To</th>
+                          <th>Date Added</th>
+                          <th>Status</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>Nurdeen Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">Pending</td>
+                      </tr>
+                      <tr>
+                          <td>Mohammed Ganiyu</td>
+                          <td>Ade Ayobami</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">Pending</td>
+                      </tr>
+                      <tr>
+                          <td>David Jacobs</td>
+                          <td>Jide Alade</td>
+                          <td>04-01-2023</td>
+                          <td class="status completed">Completed</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">pending</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">pending</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">pending</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status completed">Completed</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">pending</td>
+                      </tr>
+                      <tr>
+                          <td>Nurudeem Ibrahim</td>
+                          <td>Seyi Olarenwaju</td>
+                          <td>04-01-2023</td>
+                          <td class="status pending">pending</td>
+                      </tr>
+                  
+                  </tbody>
+              </table>
+          </div>
+          <!-- This the container that contain both the chart and activiy section -->
+          <div class="stats-details">
+              <!-- prospect conversion section -->
+              <div class="chart">
+                  <h3>Prospect Conversion</h3>
+                  <!-- Chart placeholder -->
+              </div>
+              <!-- activity section -->
+              <div class="activity">
+                  <h3>Activity</h3>
+                  <ul>
+                      <li>New User "Adeniyi Sam has been created <span>VIEW</span></li>
+                      <li>Seyi Olarenwaju has been Assigned to a prospect <span>VIEW</span></li>
+                      <li>Jide Alade just converted a prospect <span>VIEW</span></li>
+                      <li>New User "Adeniyi Sam has been created <span>VIEW</span></li>
+                      <li> New User "Adeniyi Sam has been created<span>VIEW</span></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </section>
+  </div>
