--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -19,7 +19,7 @@
           </p>
           <input
             type="text"
-            class="searchinput"
+            class="reportsearchinput"
             placeholder="Search name"
           />
         </div>
