--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       a {
         cursor: pointer;
         text-decoration: none;
+        border-radius: 5px;
       }
       button {
         outline: none;
