fixed settings js

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -7,12 +7,18 @@
       <div class="settings-menu-grid">
         <!-- ACCOUNT SETTINGS ICON CONTAINER -->
         <div class="settings-option active" id="account-settings">
-          <img src="/assets/settings-user.svg" alt="Account Settings" />
+          <img
+            src="/assets/settings-user.svg"
+            alt="Account Settings"
+          />
           <p>Account Settings</p>
         </div>
         <!-- CHANGE PASSWORD ICON CONTAINER -->
         <div class="settings-option" id="change-password">
-          <img src="/assets/settings-lock.svg" alt="Change Password" />
+          <img
+            src="/assets/settings-lock.svg"
+            alt="Change Password"
+          />
           <p>Change Password</p>
         </div>
         <!-- NOTIFICATION ICON CONTAINER -->
@@ -99,7 +105,9 @@
                 />
               </div>
               <div class="info-field">
-                <label for="bank-account-name">Bank Account Name:</label>
+                <label for="bank-account-name"
+                  >Bank Account Name:</label
+                >
                 <input
                   type="text"
                   id="bank-account-name"
@@ -138,7 +146,9 @@
                 placeholder="***************************"
               />
 
-              <label for="confirm-password">Confirm New Password</label>
+              <label for="confirm-password"
+                >Confirm New Password</label
+              >
               <input
                 type="password"
                 id="confirm-password"
@@ -165,7 +175,9 @@
             <span>Push</span>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>Receive all notifications</p></div>
+            <div class="toggle-label">
+              <p>Receive all notifications</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -186,7 +198,9 @@
             <span>Push</span>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>Receive new chat messages</p></div>
+            <div class="toggle-label">
+              <p>Receive new chat messages</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -199,7 +213,9 @@
             </div>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>Receive new inbox mail</p></div>
+            <div class="toggle-label">
+              <p>Receive new inbox mail</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -220,7 +236,9 @@
             <span>Push</span>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>New prospect created</p></div>
+            <div class="toggle-label">
+              <p>New prospect created</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -233,7 +251,9 @@
             </div>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>New prospect activity</p></div>
+            <div class="toggle-label">
+              <p>New prospect activity</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -246,7 +266,9 @@
             </div>
           </div>
           <div class="toggle-group">
-            <div class="toggle-label"><p>Prospect has exceeded SLA</p></div>
+            <div class="toggle-label">
+              <p>Prospect has exceeded SLA</p>
+            </div>
             <div class="toggle-switch">
               <label class="switch">
                 <input type="checkbox" checked />
@@ -292,5 +314,5 @@
       </div>
     </div>
   </div>
-  <script src="/js/settings.js"></script>
+  <script src="../js/settings.js"></script>
 </div>
