--- a/pages/report.html
+++ b/pages/report.html
@@ -207,7 +207,7 @@
         </div>
         <div class="report-prospect-conversion">
           <h3>Prospect Conversion</h3>
-          <canvas id="conversionChart"></canvas>
+          <canvas id="conversionChart" width="100%"></canvas>
         </div>
         <div class="report-top-branches">
           <h3>Top Branches</h3>
