Fixed the button tag style affecting general code and also updated the settings js.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -146,7 +146,7 @@
                 placeholder="***************************"
               />
             </form>
-            <button type="submit">Save</button>
+            <button class="password-btn" type="submit">Save</button>
           </div>
         </div>
       </div>
