--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <script src="./js/create-prospect-upload.js"></script>
     <script src="./js/report-table.js"></script>
-    <script src="/js/settings.js"></script>
+    <!-- <script src="/js/settings.js"></script> -->
     <!-- <script src="./js/create-prospect-upload.js"></script> -->
     <!-- <script src="./js/report-table.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
